<resources>
    <string name="app_name">Movies</string>
    <string name="title">Movie Title</string>
    <string name="titleHint">Enter movie title here</string>
    <string name="genre">Genre</string>
    <string name="genreHint">Enter genre here</string>
    <string name="year">Year</string>
    <string name="yearHint">Enter year of release here</string>
    <string name="rating">Rating</string>
    <string-array name="rating">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
    <string name="insert">INSERT</string>
    <string name="show">SHOW LIST</string>
    <string name="showAll">SHOW ALL MOVIES WITH THIS RATING</string>

    <string name="id">Movie ID</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
</resources>